# trading-portfolio-tracker

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: black.yml  format.yml  pytest.yml  test.yml
resources/: portfolio.db
resources/portfolio_data/: load.sql  portfolio.csv  schema.sql  transaction.csv
src/: app.py  finance.py  portfolio.py  transactions.py
src/trading_portfolio_tracker/: app.py  finance.py  portfolio.py  transactions.py
src/trading_portfolio_tracker/ui/: add_transaction.ui  main_window.ui  main_window_ui.py  portfolio_performance.ui  transaction_history.ui
src/ui/: add_transaction.ui  add_transaction_ui.py  main_menu.py  main_window.py  main_window.ui  main_window_ui.py  portfolio_performance.ui  portfolio_performance_ui.py  transaction_history.ui  transaction_history_ui.py
tests/: test_finance.py  test_transactions.py
utils/: export_duckdb.py  import_duckdb.py
