[tool.poetry]
name = "trading-portfolio-tracker"
version = "0.1.0"
description = "A cross-platform desktop application for monitoring and managing your investments from different brokers, with real-time market data integration from Yahoo Finance. Developed with Qt."
authors = ["Isaac Cheng <47993930+IsaacCheng9@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
coverage = "^7.3.4"
pandas = "^2.1.4"
pytest = "^7.4.3"
requests = "^2.31.0"
yfinance = "^0.2.33"
duckdb = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
