[tool.poetry]
name = "trading-portfolio-tracker"
version = "0.1.0"
description = "A cross-platform desktop application for monitoring and managing your investments from different brokers, with real-time market data integration from Yahoo Finance. Developed with Qt."
authors = ["Isaac Cheng <47993930+IsaacCheng9@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pandas = "^2.1.4"
requests = "^2.32.0"
yfinance = "^0.2.40"
duckdb = "^1.1.0"
pyside6 = "^6.6.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.4"
pytest = "^7.4.4"
ruff = "^0.4.10"

[tool.poetry.scripts]
app = "src.trading_portfolio_tracker.app:main"
import_db = "utils.import_duckdb:main"
export_db = "utils.export_duckdb:main"

[[tool.poetry.packages]]
include = "trading_portfolio_tracker"
from = "src"

[tool.ruff]
exclude = ["src/trading_portfolio_tracker/ui/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
